--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Kunal Shah
-logo: IMG-20240203-WA0004.jpg
+logo: assets/img/IMG-20240203-WA0004.jpg
 #descriptions: text below image
 # show_downloads: true
 theme: jekyll-theme-tactile
