--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Kunal Shah
 logo: assets/img/IMG-20240203-WA0004.jpg
 #descriptions: text below image
 # show_downloads: true
-# theme: jekyll-theme-tactile
-remote_theme: pages-themes/hacker@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+theme: jekyll-theme-minimal
+# remote_theme: pages-themes/hacker@v0.2.0
+# plugins:
+# - jekyll-remote-theme # add this line to the plugins list if you already have one
